update scroll to html avoid multiplt scrollbar

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -46,12 +46,16 @@ html, body
   background-color: $color_white
   color: $color_brown
   font-size: 15px
-  border: solid 6px $color_yellow
   overflow: hidden
+  height: 100vh
   box-sizing: border-box
 
+html
+  border: solid 10px $color_yellow
+  
 body
-  overflow-y: hidden
+  height: calc(100vh - 20px)
+  overflow-y: scroll
   position: relative
   margin: 0px auto
 
@@ -213,6 +217,7 @@ section.page_index
     padding-top: 50px
     margin-top: -50px
     overflow: hidden
+    width: 100%
     img
       height: 70vh
       width: auto
@@ -239,11 +244,11 @@ section.page_index
 .pages_area
   // height: 100%
   min-height: calc( 100vh - 51px)
-  max-height: calc( 100vh - 51px)
+  // max-height: calc( 100vh - 51px)
 
   // padding-top: 20px
   // padding-bottom: 50px
-  overflow-y: scroll
+  
 
 .navbar
   border-radius: 0px
